# ed_localization

./: .editorconfig  .travis.yml  CMakeLists.txt  README.md  package.xml  plugins.xml  rosdoc.yaml
include/ed_localization/: kdtree.h  localization_plugin_base.h  odom_model.h  particle_filter.h
src/: kdtree.cpp  kdtree.h  laser_model.cpp  laser_model.h  localization_laser_test_plugin.cpp  localization_laser_test_plugin.h  localization_plugin.cpp  localization_plugin.h  localization_plugin2.cpp  localization_plugin_base.cpp  localization_plugin_old.cpp  localization_rgbd_plugin.cpp  localization_rgbd_plugin.h  localization_rgbd_test_plugin.cpp  localization_rgbd_test_plugin.h  localization_tf_plugin.cpp  localization_tf_plugin.h  odom_model.cpp  odom_model.h  particle_filter.cpp  particle_filter.h  relative_localization_plugin.cpp  relative_localization_plugin.h  rgbd_model.cpp  rgbd_model.h  transform.h
src/slam/: slam_plugin.cpp  slam_plugin.h
test/: load_plugin_amigo
tools/: particles_analyzer.cpp
